Changed img directory

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <!--sidebar-->
       <aside class="sidebar-section">
         <div class="my-photo">
-          <img src="/img/my_photo.jpeg" alt="my photo" />
+          <img src="img/my_photo.jpeg" alt="my photo" />
         </div>
 
         <!--contacts section-->
